don't trigger sync of config always at same time to avoid clashes if x instances are running

BUG: 456208